@startuml TD1Step3
package TD1 {
  package step3 {
    package api {
        package monetary {
            interface Product{
                price(): double
            }
        }

        package dietetic {
            interface DieteticElement{
                calories_per_100g(): double
            }
        }

        package restauration {
            interface Food extends DieteticElement, Product{
                weight(): double
                calories(): double <<default>>
            }

            interface Base extends DieteticElement, Product{
                hasUniquePrice(): boolean
            }

            class Recipe implements Food{
                -name: String

                +this(in name: String, in items: List<Ingredient>)
                +name(): String
                +calories_per_100g(): double
                +weight(): double
                +calories(): double
                +price(): double
                +toString(): String
            }

            class Ingredient implements Food{
                -weight: double

                +this(in base: Base, in weight: double)
                +calories_per_100g(): double
                +weight(): double
                +calories(): double
                +price(): double
                +toString(): String
            }



        }

        package burger {
            class Burger extends Recipe{
                +this(in name: String, in ingredients: List<Ingredient>)
            }

            enum BurgerBase implements Base{
                BURGER, BARBECUE, BEARNAISE, BEEF, WHITEFISH, CHEDDAR, DEEPFRIEDONIONS, TOMATO

                +calories_per_100g(): double
                +price(): double
                +hasUniquePrice(): boolean
                +toString(): String
            }

        }

        Ingredient "-" <--*  "*" Recipe  : -ingredients
        Base "1" <--*  Ingredient : -base


    }

    package client {
        class App
    }

  }

  client ..> api

}



@enduml